--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </p>
         <!-- <img src="cat.jpg" alt="cat"; class="endcat"> -->
         <img src="https://images.unsplash.com/photo-1516280030429-27679b3dc9cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-                    alt="HTML5 standards"; class="endcat" />
+            alt="HTML5 standards"  class="endcat" />
     </main>
     <br>
     <footer style="font-family: 'Alegreya', serif; font-size: 20px;">
