--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </ol>
         </p>
         <p style="text-align: center;">
-            10 most popular female cat names:
+            <span>10 most popular female cat names:</span>
         <div class="saraksts">
             <ol style="text-align: center;">
 
@@ -178,15 +178,16 @@
                 <li>Zoe</li>
                 <li>Chloe</li>
                 <li>Sophie</li>
+            </ol>
         </div>
-        </ol>
+
         </p>
         <p style="text-align: right;">
             Source: <a href="https://www.rover.com/blog/best-cat-names/">Cat names</a>
         </p>
         <!-- <img src="cat.jpg" alt="cat"; class="endcat"> -->
         <img src="https://images.unsplash.com/photo-1516280030429-27679b3dc9cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-            alt="HTML5 standards"  class="endcat" />
+            alt="HTML5 standards" class="endcat" />
     </main>
     <br>
     <footer style="font-family: 'Alegreya', serif; font-size: 20px;">
