Kluda ar p tagiem

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div style="display: flex;">
             <div style="width: 50%;">
                 <div>
-                    <p><span>Here you will find some reasons to have cat. Reasons include: </span>
+                    <p><span>Here you will find some reasons to have cat. Reasons include: </span></p>
                     <ul>
                         <li>cats and children;</li>
                         <li>apartment cats;</li>
@@ -29,7 +29,7 @@
                         <li>your health impact because of cat;</li>
                         <li>their length of life.</li>
                     </ul>
-                    </p>
+
                 </div>
             </div>
             <div class="catimage">
@@ -38,28 +38,33 @@
             </div>
         </div>
 
-        <p>
+
         <div style="display: flex;">
             <div class="catimage">
                 <img src="https://images.unsplash.com/photo-1548366086-7f1b76106622?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=624&q=80"
                     alt="HTML5 standards" />
             </div>
             <div style="text-align: justify; width: 50%;">
-                If you have kids, or have kids on the way, having a pet at a young age can lower their risk of getting
-                allergies. Not only to pet hair, but according to the National Institute of Health, pet exposure at a
-                young
-                age can also prevent "other types of common allergies, such as allergy to dust mites, ragweed, and
-                grass."
-                Cats can have a bunch of positive effects on children. According to Care.com, owning a cat can teach
-                kids
-                social skills and help them cope with traumatic situations. Don't be fooled by all the fluff and fur,
-                cats
-                are natural predators. Despite being domesticated, they still have that hunter instinct and will keep
-                your
-                home free of mice.
+                <p>If you have kids, or have kids on the way, having a pet at a young age can lower their risk of
+                    getting
+                    allergies. Not only to pet hair, but according to the National Institute of Health, pet exposure at
+                    a
+                    young
+                    age can also prevent "other types of common allergies, such as allergy to dust mites, ragweed, and
+                    grass."
+                    Cats can have a bunch of positive effects on children. According to Care.com, owning a cat can teach
+                    kids
+                    social skills and help them cope with traumatic situations. Don't be fooled by all the fluff and
+                    fur,
+                    cats
+                    are natural predators. Despite being domesticated, they still have that hunter instinct and will
+                    keep
+                    your
+                    home free of mice.
+                </p>
             </div>
         </div>
-        </p>
+
         <p>
         <div style="display: flex;">
             <div style="text-align: justify; width: 50%;">
