--- a/index.html
+++ b/index.html
@@ -65,86 +65,95 @@
             </div>
         </div>
 
-        <p>
+
         <div style="display: flex;">
             <div style="text-align: justify; width: 50%;">
-                In a study of self-proclaimed dog-lovers versus cat-lovers done at Carroll University in Waukesha,
-                Wisconsin, cat owners scored higher on intelligence than dog owners did. Cats do sleep a lot, but even
-                when
-                they're snoozing, they still stay super alert. They're actively hearing and smelling things while
-                asleep, so
-                that they're able to pounce on a pest at a moment's notice. Plenty of apartments allow cats because
-                they’re
-                quiet, so they are less likely to wake the neighbors up when someone rings your doorbell. Unlike our
-                friend
-                Fido, Whiskers doesn't require multiple walks a day. Older cats can also be left alone for a day or two
-                if
-                they have access to their food, water, and litter box. Of course, make sure you speak with your
-                veterinarian
-                beforehand.
+                <p>In a study of self-proclaimed dog-lovers versus cat-lovers done at Carroll University in Waukesha,
+                    Wisconsin, cat owners scored higher on intelligence than dog owners did. Cats do sleep a lot, but
+                    even
+                    when
+                    they're snoozing, they still stay super alert. They're actively hearing and smelling things while
+                    asleep, so
+                    that they're able to pounce on a pest at a moment's notice. Plenty of apartments allow cats because
+                    they’re
+                    quiet, so they are less likely to wake the neighbors up when someone rings your doorbell. Unlike our
+                    friend
+                    Fido, Whiskers doesn't require multiple walks a day. Older cats can also be left alone for a day or
+                    two
+                    if
+                    they have access to their food, water, and litter box. Of course, make sure you speak with your
+                    veterinarian
+                    beforehand.
+                </p>
             </div>
             <div class="catimage">
                 <img src="https://images.unsplash.com/photo-1548546738-8509cb246ed3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                     alt="HTML5 standards" />
             </div>
         </div>
-        </p>
-        <p>
+
         <div style="display: flex;">
             <div class="catimage">
                 <img src="https://images.unsplash.com/photo-1595752776689-aebef37b5d32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                     alt="HTML5 standards" />
             </div>
             <div style="text-align: justify; width: 50%;">
-                Ever wonder why cats love to play? Since they don't hunt for their food, it's believed kitties have an
-                abundance of energy stored up and release it through playtime. Cats are a lot smarter than people make
-                them
-                out to be. According to Animal Planet, cats are constantly learning and have an excellent memory. When
-                you
-                head off to work and need to leave your pet behind, you may start to feel a little guilty. But it might
-                be
-                easier with a cat who loves having the house to themselves. Cats will sleep whenever they’re bored
-                about
-                15 hours a day.
+                <p>Ever wonder why cats love to play? Since they don't hunt for their food, it's believed kitties have
+                    an
+                    abundance of energy stored up and release it through playtime. Cats are a lot smarter than people
+                    make
+                    them
+                    out to be. According to Animal Planet, cats are constantly learning and have an excellent memory.
+                    When
+                    you
+                    head off to work and need to leave your pet behind, you may start to feel a little guilty. But it
+                    might
+                    be
+                    easier with a cat who loves having the house to themselves. Cats will sleep whenever they’re bored
+                    about
+                    15 hours a day.</p>
             </div>
         </div>
-        </p>
-        <p>
         <div style="display: flex;">
             <div style="text-align: justify; width: 50%;">
-                Since cats don’t eat nearly as much meat as dogs do, it results in a much smaller carbon footprint.
-                While
-                definitely smaller, both animals have carbon footprints equivalent to cars, according to some
-                sustainability
-                authors. A study found that cats drink water "gracefully," so if you have misophonia a.k.a. you hate the
-                sound of chewing (and/or drinking), you may want to get a cat. Research shows cats can help lower your
-                blood
-                pressure and reduce the risk of dying from a heart attack. It's amazing knowing that one of these cuties
-                is
-                keeping you healthy. Not only is purring absolutely adorable, but it can also be a soothing sound for
-                humans. In fact, there are numerous online videos of cats just purring to help people fall asleep.
+                <p>Since cats don’t eat nearly as much meat as dogs do, it results in a much smaller carbon footprint.
+                    While
+                    definitely smaller, both animals have carbon footprints equivalent to cars, according to some
+                    sustainability
+                    authors. A study found that cats drink water "gracefully," so if you have misophonia a.k.a. you hate
+                    the
+                    sound of chewing (and/or drinking), you may want to get a cat. Research shows cats can help lower
+                    your
+                    blood
+                    pressure and reduce the risk of dying from a heart attack. It's amazing knowing that one of these
+                    cuties
+                    is
+                    keeping you healthy. Not only is purring absolutely adorable, but it can also be a soothing sound
+                    for
+                    humans. In fact, there are numerous online videos of cats just purring to help people fall asleep.
+                </p>
             </div>
             <div class="catimage">
                 <img src="https://images.unsplash.com/flagged/photo-1557427161-4701a0fa2f42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                     alt="HTML5 standards" />
             </div>
         </div>
-        </p>
-        <p>
         <div style="display: flex;">
             <div class="catimage">
                 <img src="https://images.unsplash.com/photo-1553713425-fa55a5997de3?ixlib=rb-1.2.1&auto=format&fit=crop&w=633&q=80"
                     alt="HTML5 standards" />
             </div>
             <div style="text-align: justify; width: 50%;">
-                Egyptian history shows that cats worked hard to be welcomed into homes. But people eventually noticed
-                that
-                the animals resembled Bast, the Ancient Egyptian goddess of warfare, and they started to be held in high
-                regard. There are few things in life more heartbreaking than losing a pet, which is why knowing that the
-                average domestic cat has an average lifespan of about 15 years is quite comforting.
+                <p>Egyptian history shows that cats worked hard to be welcomed into homes. But people eventually noticed
+                    that
+                    the animals resembled Bast, the Ancient Egyptian goddess of warfare, and they started to be held in
+                    high
+                    regard. There are few things in life more heartbreaking than losing a pet, which is why knowing that
+                    the
+                    average domestic cat has an average lifespan of about 15 years is quite comforting.
+                </p>
             </div>
         </div>
-        </p>
         <p style="text-align: center; font-family: 'Dancing Script', cursive; font-size: 30px;">
             I don't really have to say this, but in case you need convincing, cats are seriously cute.
         </p>
@@ -152,9 +161,11 @@
             Source: <a href="https://www.goodhousekeeping.com/life/pets/g21525625/why-cats-are-best-pets/">Reasons to
                 have cat</a>
         </p>
-        <p style="text-align: center;">
-            10 most popular male cat names:
+
         <div class="saraksts">
+            <p style="text-align: center;">
+                10 most popular male cat names:
+            </p>
             <ol>
 
                 <li>Oliver</li>
@@ -170,10 +181,10 @@
             </ol>
         </div>
 
-        </p>
-        <p style="text-align: center;">
-            10 most popular female cat names:
-        <div class="saraksts">
+        <div class="saraksts" style="text-align: center;">
+            <p>
+                <span>10 most popular female cat names:</span>
+            </p>
             <ol style="text-align: center;">
 
                 <li>Luna</li>
@@ -188,8 +199,6 @@
                 <li>Sophie</li>
             </ol>
         </div>
-
-        </p>
         <p style="text-align: right;">
             Source: <a href="https://www.rover.com/blog/best-cat-names/">Cat names</a>
         </p>
